--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,6 +21,7 @@ body,
   // Size
   margin: 0;
   padding: 0;
+  // Removing the outlines (specifically when buttons are pressed)
   &:focus {
     outline: 0 !important;
   }
@@ -138,8 +139,10 @@ body,
     color: $c4;
     // Small font
     p {
+      margin-top: 4px;
       font-size: 0.7em;
       letter-spacing: 1px;
+      opacity: 0.7;
     }
 
     // Large font
@@ -206,7 +209,8 @@ body,
           //  For both these squares...
           &.bottom-left,
           &.right {
-            outline: 1px solid white;
+            outline: 1px solid $c3;
+            opacity: 0.7;
             &:after {
               // the diagonal line passing through the square
               @include diagLine;
@@ -234,12 +238,13 @@ body,
           // Size
           height: 40px;
           width: 40px;
-          border: 2px solid white;
+          border: 2px solid $c3;
           float: left;
           // Shape
           border-radius: 50%;
 
-          color: white;
+          color: $c3;
+          opacity: 0.7;
         }
         // The button on the right
         .purchase-button {
@@ -268,6 +273,10 @@ body,
       h1 {
         font-family: $f1;
       }
+      #Alpha-logo {
+        @include Alpha-logo;
+        margin-right: 10px;
+      }
       // Dot at the top-right
       .dot {
         background: $c5;
@@ -284,10 +293,12 @@ body,
       .square.left {
         background: $c5;
       }
+
       // The 'base' (downward arrow-ish) icon between departure airport and arrival airport
       .down-arrow::after {
         background: $c1;
       }
+
       // The bottom-right 'Add to wallet' button
       .purchase-button {
         background: $c5;
@@ -323,11 +334,22 @@ body,
       // The square at the top-left
       .square.left {
         background: $c4;
+        opacity: 0.7;
+      }
+      // The square at the top-left
+      .square.bottom-left::after {
+        @include diagLineReverse;
+      }
+
+      // The line below that suare
+      .line {
+        transform: translate(-62px, 90px);
       }
       // The bottom-right 'Add to wallet' button
       .purchase-button {
         background: $c3;
         color: $c2;
+        opacity: 0.7;
       }
 
       // The 'base' (downward arrow-ish) icon between departure airport and arrival airport
